# puzzle-hamilton

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml  requirements.in  requirements.txt
src/hampuz/: __init__.py  cli.py  generator.py
src/hampuz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_generator.py
