[project]
name = "hampuz"
version = "0.1.0"
description = "Generate printable Hamilton path puzzles for primary school students."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hampuz = "hampuz.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

